--- a/config.example.yaml
+++ b/config.example.yaml
@@ -1,7 +1,7 @@
 appinfo:
   name: track-my-day-gotth
   version: 0.0.1
-  environtment: development
+  environtment: development # development, test, production
   secretkey: "secretkey"
 
 server:
@@ -11,4 +11,6 @@ server:
   timeout: 30
 
 database:
-  name: track_my_day_gotth.db
+  prod_db_path: "/var/data/prod/production.db"  # Production database path
+  test_db_path: "/tmp/test/test.db"             # Test database path
+  dev_db_path: "./db/development.db" #Development database path
